k8s/client/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-client-service
spec:
  selector:
    app: mern-client
  ports:
    - port: 3000 # Expose the client on port 80 for external access
      targetPort: 3000
  type: ClusterIP
